@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-75: Create sections on how to get involved and how 
+  to generate patches on website. (jghoman)
+
   GIRAPH-63: Typo in PageRankBenchmark. (shaunak via jghoman)
 
   GIRAPH-47: Export Worker's Context/State to vertices through
